Added Blazor List Pages with Delete function

--- a/CarRentalManagement/Client/Pages/Customers/Index.razor
+++ b/CarRentalManagement/Client/Pages/Customers/Index.razor
@@ -23,9 +23,11 @@ else
 
             <tr>
 
-                <th>Name</th>
-
+                <th>Driving License</th>
+                <th>Contact Number</th>
+                <th>Email Address</th>
                 <th>Actions</th>
+                
 
             </tr>
 
