--- a/CarRentalManagement/Client/Shared/NavMenu.razor
+++ b/CarRentalManagement/Client/Shared/NavMenu.razor
@@ -65,7 +65,17 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
             </NavLink>
         </li>
-     
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="vehicles">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Vehicles
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="bookings">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Bookings
+            </NavLink>
+        </li>
+
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="samplepage">
